--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Introduction
+
+2D multiphase SDPD code (authors: Xiangyu Hu, Sergey Litvinov, Qingguang Xie)
+
 *Install*
 Run 
 ./local-install.sh
