--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Introduction
 
-2D multiphase SDPD code (authors: Xiangyu Hu, Sergey Litvinov, Qingguang Xie)
+2D multiphase SDPD code
 
 *Install*
 Run 
